--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bank-Application</title>
+    <link rel="stylesheet" href="./styles/normalize.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
 </head>
 <body>
-    
+    <h1>
+        Higher Order Array Methods
+        </h1>
+<div class="conatiner">
+    <aside>
+        <button id="add-user">
+            Add User
+        </button>
+        <button id="double">Double Balance
+
+        </button>
+        <button id="filter-rich">Filter Rich
+
+        </button>
+        <button id="total">Total amount
+        </button>
+    </aside>
+    <main id="main">
+        <h2><strong>Name</strong>Balance</h2>
+    </main>
+</div>    
+    <script src="./srcipts/script.js"></script>
 </body>
 </html>
